# clean_data_is_all_you_need

./: .gitignore  README.md  requirements.txt
Text_Json_extraction/: Text_Extraction_after_DLA.ipynb
app/: README.md  app.py  dev_text_extract.ipynb  docker-compose.yml  script_build_all_containers.sh
app/data/: 1603.01514.txt  dla_categories.json  dla_categories_doclaynet.json  json from grobid.json  markdown from html.mmd  pdf_server.py
app/data/processed_files/: 1603.01514_Phase_2.json  1604.00727.txt  1604.00727_Phase_2.json
app/dla/: Dockerfile  README.md  pyproject.toml  script_build_image.sh
app/dla/docker_resources/: requirements.txt  requirements_layoutlmv3.txt  requirements_web_api.txt
app/dla/src/: dev_dla_phase_2_inference.ipynb  dev_phase_2_inference_tester.ipynb  dla_pipeline_inference.py  dla_pipeline_inference_phase_2.py  dla_pipeline_settings.yaml  dla_pipeline_support_classes.py  main.py  (+2 more)
app/model_weights/: README.md
app/text_extract_side_container/text_extraction_alt/: pyproject.toml
app/text_extraction/: script_build_image.sh
dla_pipeline/: README.md  dla_mask_text_extraction_test.ipynb  dla_pipeline_inference.py  dla_pipeline_settings.yaml  dla_pipeline_support_classes.py  dla_pipeline_support_functions.py  env_test.py  readme.md
docker/layoutlmv3-cuda-detectron-conda/: Dockerfile  build_image.sh  docker-compose.yml  jupyterLab.sh
markdown2json/: README.md
nougat/: README.md
nougat finetuning/: DLA Annotation.ipynb  Image Extraction.ipynb  MMD Annotation.ipynb  MMD to HTML.ipynb  PDF maker.ipynb  train_nougat.yaml
(+44 files in other folders)
