[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Fnriquel <fnriquel@berkeley.edu>"]



[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
pymupdf = "^1.23.6"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
